<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">System Obsługi Kina</string>


    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">Main</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_customer_menu">CustomerMenu</string>
    <string name="error_short_password">Hasło musi składać się z minium 6 znaków!</string>
    <string name="error_invalid_credentials">Błędna kombinacja Loginu i Hasła!</string>
    <string name="error_no_internet_connection">Utracono połączenie z internetem</string>
    <string name="notice_new_version_available">Proszę pobrać nową wersję aplikacji</string>
    <string name="notice_new_version_available_description">Kliknij w przycisk AKTUALIZUJ by pobrać najnowszą wersję ze sklepu PLAY</string>
    <string name="notice_maintenance">Trwają prace konserwacyjne</string>
    <string name="notice_enter_email" tools:ignore="Typos">Wprowadź adres email</string>
    <string name="notice_autologin_disabled">Automatyczne logowanie zostało wyłączone</string>
    <string name="notice_mainetnance_desctiption">Przepraszamy i prosimy o cierpliwość, działanie systemu zostanie przywrócone najszybciej jak to możliwe!</string>

    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="sign_in">Zaloguj</string>
    <string name="register" tools:ignore="Typos">Utwórz nowe konto</string>

    <string name="logged_in_customer">Zalogowany użytkownik</string>
    <string name="logged_in_staff">Panel administracyjny</string>

    <string name="enter_name">Podaj imię</string>
    <string name="enter_surname">Podaj nazwisko</string>
    <string name="enter_email">Podaj email</string>
    <string name="enter_password">Podaj hasło</string>
    <string name="confirm_password">Powtórz hasło</string>

    <string name="logout">Wyloguj</string>
    <string name="account_settings">Profil</string>
    <string name="contact_dev">Kontakt</string>

    <string name="student">Uczeń / Student</string>
    <string name="disabled_person">Osoba niepełnosprawna</string>
    <string name="adult">Osoba dorosła</string>
    <string name="child">Dziecko do 6 roku życia</string>
    <string name="enter_discount_type">Do jakiej kategorii należysz?</string>
    <string name="press_twice_to_exit">Wciśnij ponownie by wyjść</string>
    <string name="error_enter_valid_email" tools:ignore="Typos">Podaj poprawny adres E-mail!</string>
    <string name="error_enter_name">Wpisz swoje imię!</string>
    <string name="error_enter_surname">Wpisz swoje nazwisko!</string>
    <string name="error_enter_email">Wpisz swój email!</string>
    <string name="error_passwords_do_not_match">Hasła nie są jednakowe!</string>
    <string name="error_enter_new_password">Podane hasło musi mieć powyżej 6 znaków!</string>
    <string name="error_enter_confirmed_password">Powtórzone hasło się nie zgadza!</string>
    <string name="error_signup_failed">Rejestracja zakończona niepowodzeniem! Utracono połączenie z siecią lub obecny email jest już użyty!</string>
    <string name="notice_account_created">Konto utworzone pomyślnie!</string>
    <string name="user_consent_field">Potwierdzam zgodność danych osobowych</string>
    <string name="register_new_user">Zarejestruj</string>
    <string name="error_consent_not_given">Proszę zatwierdzić zgodność danych osobowych!</string>
    <string name="signup_activity_title">Wypełnij formularz rejestracji</string>

    <string name="age_cathegory_infants">3+</string>
    <string name="age_cathegory_primary">6+</string>
    <string name="age_cathegory_secondary">12+</string>
    <string name="age_cathegory_adults">18+</string>

    <string name="screening_technology_3d">3D</string>
    <string name="screening_technology_2d">2D</string>

    <string name="language_method_lector">Lektor PL</string>
    <string name="language_method_dubbing">Dubbing PL</string>
    <string name="language_method_subtitles">Napisy PL</string>

    <string name="user_tickets_title">Twoje Bilety</string>
    <string name="loading_in_progress">Ładowanie...</string>
    <string name="repertoir_for_today">Repertuar na dziś</string>
    <string name="special_offer">Oferta specjalna</string>
    <string name="my_tickets">Moje bilety</string>
    <string name="repertoir">Repertuar</string>

    <string-array name="discount_types">
        <item>@string/student</item>
        <item>@string/disabled_person</item>
        <item>@string/adult</item>
        <item>@string/child</item>
    </string-array>
    <string-array name="rows">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <string-array name="cols">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


</resources>
