<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_anchorGravity="bottom"
    tools:context="com.wat.jannowakowski.systemobslugikina.activities.views.Signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal|center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/dark_blue"
                android:hint="@string/enter_email"
                android:inputType="text|textWebEmailAddress"
                android:maxLines="1"
                android:textColor="@color/text_black"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/dark_blue"
                android:hint="@string/enter_password"
                android:inputType="text|textPassword"
                android:maxLines="1"
                android:textColor="@color/text_black"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/dark_blue"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/text_black"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/text_black"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/dark_blue"
                android:hint="@string/enter_surname"
                android:inputType="textCapWords|textPersonName"
                android:maxLines="1"
                android:textColor="@color/text_black"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners_8"
                android:backgroundTint="@color/pale_blue"
                android:padding="4dp"
                android:text="@string/enter_discount_type"
                android:textColor="@color/mid_dark_blue"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <Spinner
                android:id="@+id/discount_type"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:entries="@array/discount_types" />

            <CheckBox
                android:id="@+id/user_consent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/user_consent_field" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_corners_8"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/register_new_user"
                android:textColor="@color/text_white"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:visibility="gone" />

            <!-- Link to Login Screen -->

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>